--- a/Projects/Architecture3.WebApi/Pages/Shared/Views/_Layout.cshtml
+++ b/Projects/Architecture3.WebApi/Pages/Shared/Views/_Layout.cshtml
@@ -4,10 +4,13 @@
     <title>bla</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="~/Static/Content/css/app.min.css" rel="stylesheet" />
 </head>
 <body>
     <div>
         @RenderBody()
     </div>
+    <script src="~/Static/Scripts/jquery.min.js"></script>
+    <script src="~/Static/Scripts/bootstrap.min.js"></script>
 </body>
 </html>
