--- a/Projects/Architecture3.Web/Pages/Home/Index.cshtml
+++ b/Projects/Architecture3.Web/Pages/Home/Index.cshtml
@@ -1,3 +1,3 @@
-﻿@model Architecture3.Web.Dtos.Home.Index.ViewModel
+﻿@model Architecture3.Web.Dtos.Pages.Home.Index.ViewModel
 <h2>@Model.Title</h2>
 
